<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sbforge</groupId>
    <artifactId>sbforge-parent</artifactId>
    <version>24</version>
  </parent>

  <groupId>dk.kb.cdx</groupId>
  <artifactId>jwarc-cdx-indexer-workflow</artifactId>
  <version>1.0-SNAPSHOT</version>
                              
   <scm>
    <url>https://github.com/netarchivesuite/jwarc-cdx-indexer-workflow</url>
    <connection>scm:git:ssh://git@github.com:netarchivesuite/jwarc-cdx-indexer-workflow.git</connection>
    <developerConnection>scm:git:ssh://git@github.com:netarchivesuite/jwarc-cdx-indexer-workflow.git</developerConnection>                                       
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <repository>
      <id>sbforge-nexus</id>
      <url>https://sbforge.org/nexus/content/groups/public</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <properties>
    <!-- Specify java version here, to support forbiddenapis plugin -->
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <!-- Replace the line below with
         <api.check.phase>none</api.check.phase>
         to disable forbidden APIs check -->
    <api.check.phase>process-test-classes</api.check.phase>

    <!-- Needed to populate build.properties -->
    <timestamp>${maven.build.timestamp}</timestamp>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
  </properties>

  <dependencies>
      
    <!--Command line -->
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>4.6.1</version>
    </dependency>
  
    <!--JWarc -->
    <dependency>
      <groupId>org.netpreserve</groupId>
      <artifactId>jwarc</artifactId>
     <version>0.28.3</version>
    </dependency>
  
    
    <!--log and utils -->
    <dependency>
      <groupId>dk.kb.util</groupId>
      <artifactId>kb-util</artifactId>
      <version>1.4.8</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.36</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.2.10</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-inline</artifactId>
      <version>4.6.1</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.6.2</version>
      <scope>test</scope>
    </dependency> 
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources/</directory>
        <includes>
          <include>build.properties</include>
        </includes>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <tarLongFileMode>posix</tarLongFileMode>
          <descriptors>
            <descriptor>src/main/assembly/assembly.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
